--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius animi placeat, accusantium eos eveniet nostrum libero aliquam, veniam quas illo ipsa velit harum excepturi quos officia ea impedit non!</p>
 </body>
 </html>
